2009-05-04 Iuri Fernandes <iurifq@gmail.com>
* Made validation method okToReserve to be used to validade if there's
available apartments.

2009-05-04 Iuri Fernandes <iurifq@gmail.com>
* Finished creation of CRUD reserva.

2009-05-04 Suzana Matos <suzana.mato@gmail.com>
* Fixed combobox

2009-05-04 Suzana Matos <suzana.mato@gmail.com>
* Fixed apartamento
	- show the status
	- show the type
	- combobox of the type

2009-05-04 Iuri Fernandes <iurifq@gmail.com>
* Added field in "reserva" to select the "hospede" by name.

2009-05-04 Suzana Matos <suzana.mato@gmail.com>
* models : 
	- reservas/apartamentos: included belongs_to function (FK)
* views : 
	- reservas/apartamentos/tipos_apartamentos : translated words and
	fixed index layout

2009-05-04 Suzana Matos <suzana.mato@gmail.com>
* Fixed createTables 
	- apartamentos (wrong name in FK)
	- reservas (wrong name in FK)
	- hospedes (without engine inodb)

2009-05-04 Iuri Fernandes <iurifq@gmail.com>
* Created  scaffolding for apartamento.
* Added forgotten files from reserva.

2009-05-04 Iuri Fernandes <iurifq@gmail.com>
* Created  scaffolding for reservas. It's necessary to alter tipoAp and hosp in new reserva form.

2009-05-04 Iuri Fernandes <iurifq@gmail.com>
* Created  table reservas, but the foreign key for hospedes is not working.

2009-05-04 Iuri Fernandes <iurifq@gmail.com>
* Created Tipo_Apartamentos scaffolding.

2009-05-04 Iuri Fernandes <iurifq@gmail.com>
* Created foreign key for apartamento.

2009-05-02 Iuri Fernandes <iurifq@gmail.com>
* Modified createTables script to create TiposApartamentos. It's not working
yet.

2009-05-03 Suzana Matos <suzana.mato@gmail.com>
* app/views/admin : 
	- index : fixed wrong words
	- login : fixed the colspan just to be cute(?)
* public/stylesheets/scaffold : 
	- hide empty-cells in table

2009-05-03 Suzana Matos <suzana.mato@gmail.com>
* views/layouts/layout : fixed session => show the right menu now

2009-05-03 Suzana Matos <suzana.mato@gmail.com>
* controllers :