@@ -4,11 +4,11 @@
 <% form_tag do %>
 <table>
 	<tr>
-		<td>User login:</td>
+		<td>Login:</td>
 		<td><%= text_field("recepcionista", "login") %></td>
 	</tr>
 	<tr>
-		<td>Password:</td>
+		<td>Senha:</td>
 		<td><%= password_field("recepcionista", "password") %></td>
 	</tr>
 	<tr>
