@@ -4,16 +4,16 @@
 </p>
 
 <p>
-  <b>Tipo apartamento:</b>
+  <b>Tipo de apartamento:</b>
   <%=h TiposApartamento.find(@reserva.fkTiposApartamentos).nome %>
 </p>
 <p>
-  <b>Data Entrada:</b>
+  <b>Data de entrada:</b>
   <%=h @reserva.dataEntrada %>
 </p>
 
 <p>
-  <b>Data Saida:</b>
+  <b>Data de saida:</b>
   <%=h @reserva.dataSaida %>
 </p>
 
