@@ -8,7 +8,7 @@
     <%= f.text_field :nome %>
   </p>
   <p>
-    <%= f.label :descricao %><br />
+    <%= f.label :descricao, 'Descrição' %><br />
     <%= f.text_area :descricao %>
   </p>
   <p>
