@@ -1,9 +1,9 @@
 <h1>Litando os tipos de apartamentos</h1>
 
 <table>
-  <tr class="list">
+  <tr>
     <th>Nome</th>
-    <th>Descricao</th>
+    <th>Descrição</th>
     <th>Valor</th>
     <th colspan="3">Opções</th>
   </tr>
