@@ -33,7 +33,7 @@ th{
 }
 
 table{
-/*	width: 90%;*/
+	width: 100%;
 	text-align: left;
 	margin-left: auto;
 	margin-right: auto;
